--- a/_config.yml
+++ b/_config.yml
@@ -2,36 +2,20 @@ menu:
   主页: /
   归档: /archives
 
-logo: XXX
+logo: 'shuiRong'
 
 more:
-  友情链接: /links.html
-  Github: https://github.com/XXX/
-  微博: http://weibo.com/XXX
-  知乎: https://www.zhihu.com/people/XXX
-  rss: /rss2.xml
-  关于我: /
+  Github: https://github.com/shuirong/
+  知乎: https://www.zhihu.com/people/linShuiRong
+  网易云音乐: https://music.163.com/#/user/home?id=117775940
+  所见: https://isee.linshuirong.cn/
+  友链: /links.html
+  关于我: /about.html
 
 about:
-  title: Theme Pln
+  title: Hexo Theme Pln
   link: https://github.com/gaoryrt/hexo-theme-pln
 
-show_toc_bool: true
-
-# If you want to use valine,you should get the appId and appKey form https://leancloud.cn ,more setting please see https://valine.js.org
-valine:
-  enable: false # !!if you want use valine comment system,please set enable: true
-  appId: #your leancloud appId
-  appKey: #your leancloud appKey
-  guest_info: nick,mail,link #valine comment header info
-  placeholder: Just go go # valine comment input placeholder(like: Please leave your footprints )
-  avatar: mm # gravatar style https://valine.js.org/avatar
-  pageSize: 10 # comment list page size
-  verify: false # valine verify code (true/false)
-  notify: false # valine mail notify (true/false)
-  lang: zh-cn
-
+disqus_shortname:
 
 excerpt_num: 120
-
-footer_info: © XXX 20xx-2017
