--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,19 @@ more:
   Github: https://github.com/shuirong/
   知乎: https://www.zhihu.com/people/linShuiRong
   网易云音乐: https://music.163.com/#/user/home?id=117775940
-  所见: https://isee.linshuirong.cn/
+  SegmentFault: https://segmentfault.com/u/shuirong1997
   友链: /links.html
+  RSS: https://linshuirong.cn/atom.xml
   关于我: /about.html
+
+feed:
+    type: atom
+    path: atom.xml
+    limit: false
+    hub:
+    content: false
+    content_limit: 400
+    content_limit_delim: ' '
 
 about:
   title: Hexo Theme Pln
