--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ logo: 'shuiRong'
 more:
   Github: https://github.com/shuirong/
   知乎: https://www.zhihu.com/people/linShuiRong
-  草莓县: https://cmx.im/web/accounts/81232
+  Mastodon: https://cmx.im/web/accounts/81232
   SegmentFault: https://segmentfault.com/u/shuirong1997
   网易云音乐: https://music.163.com/#/user/home?id=117775940
   友链: /links.html
