--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 menu:
-  主页: /
-  归档: /archives
+  主页: /blog/
+  归档: /blog/archives
 
-logo: 'shuiRong'
+logo: '林水溶'
 
 more:
   Github: https://github.com/shuirong/
@@ -10,7 +10,7 @@ more:
   SegmentFault: https://segmentfault.com/u/shuirong1997
   网易云音乐: https://music.163.com/#/user/home?id=117775940
   友链: /links.html
-  RSS: https://linshuirong.cn/atom.xml
+  RSS: atom.xml
   关于我: /about.html
 
 feed:
