--- a/_config.yml
+++ b/_config.yml
@@ -2,19 +2,29 @@ menu:
   主页: /
   归档: /archives
 
-logo: XXX
+logo: 林水溶
 
 more:
-  友情链接: /links.html
-  Github: https://github.com/XXX/
-  微博: http://weibo.com/XXX
-  知乎: https://www.zhihu.com/people/XXX
-  rss: /rss2.xml
-  关于我: /
+  Github: https://github.com/shuirong/
+  知乎: https://www.zhihu.com/people/linShuiRong
+  SegmentFault: https://segmentfault.com/u/shuirong1997
+  网易云音乐: https://music.163.com/#/user/home?id=117775940
+  友链: /links.html
+  RSS: atom.xml
+  关于我: /about.html
 
 about:
   title: Theme Pln
   link: https://github.com/gaoryrt/hexo-theme-pln
+
+feed:
+    type: atom
+    path: atom.xml
+    limit: false
+    hub:
+    content: false
+    content_limit: 400
+    content_limit_delim: ' '
 
 show_toc_bool: true
 
@@ -34,6 +44,6 @@ valine:
 
 excerpt_num: 120
 
-footer_info: © XXX 2016-2020
+footer_info: 
 
 latex: true
