替换蕾姆、拉姆链接为imgur，升级rss设置;

--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,17 @@ about:
   link: https://github.com/gaoryrt/hexo-theme-pln
 
 feed:
-    type: atom
-    path: atom.xml
-    limit: false
-    hub:
-    content: false
-    content_limit: 400
-    content_limit_delim: ' '
+  type: atom
+  path: atom.xml
+  limit: false
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
+  # icon: icon.png
+  autodiscovery: true
+  template:
 
 show_toc_bool: true
 
